# seva-lexicon-engine

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/: basic.py
seva_lexicon_engine/: __init__.py  engine.py
seva_lexicon_engine/lexicons/: coercive_control_demo.yaml  drugs_en_demo.yaml  drugs_sv_demo.yaml  emoji_universal_demo.yaml  fraud_en_demo.yaml  fraud_sv_demo.yaml
tests/: test_engine.py
