[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seva-lexicon-engine"
version = "0.1.0"
description = "Context-aware lexicon matcher for forensic text analysis (reference implementation)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "STNDRDS AB", email = "contact@stndrds.se" },
]
keywords = [
    "forensics",
    "nlp",
    "lexicon",
    "pattern-matching",
    "digital-forensics",
    "text-analysis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/stndrdsab/seva-lexicon-engine"
Repository = "https://github.com/stndrdsab/seva-lexicon-engine"
Issues = "https://github.com/stndrdsab/seva-lexicon-engine/issues"
Publisher = "https://stndrds.se"

[tool.setuptools.packages.find]
include = ["seva_lexicon_engine*"]

[tool.setuptools.package-data]
seva_lexicon_engine = ["lexicons/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
